--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,8 @@
     "bad-words": "^1.5.1",
     "firebase-admin": "^4.2.1",
     "firebase-functions": "^0.5",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "typescript": "^3.6.4"
   },
   "main": "./lib/src/index.js",
   "private": true,
@@ -20,7 +21,7 @@
     "@types/chai": "^3.5.2",
     "@types/chai-as-promised": "0.0.30",
     "@types/mocha": "^2.2.41",
-    "@types/mock-require": "^1.3.3",
+    "@types/mock-require": "^2.0.0",
     "@types/nock": "^8.2.1",
     "@types/sinon": "^2.2.1",
     "chai": "^3.5.0",
